apps/wol-proxy/service-desktop.yaml
apiVersion: v1
kind: Service
metadata:
  name: desktop-proxy
  namespace: wol-proxy
spec:
  selector:
    app: wol-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
