apps/wol-proxy/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: wol-proxy
spec:
  selector:
    app: wol-proxy
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      name: ollama
